# fastapiHM

./: README.md  pyproject.toml
app/routes/: __init__.py  calculator.py  default.py
