[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Bohdan Savin <bogdan07112009@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
hypercorn = "^0.17.3"

[tool.poetry.scripts]
run_app = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
